# sample-axum-server

./: .env.example  Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  main.rs  response.rs
src/dto/: auth.rs  user.rs
src/handlers/: auth.rs  user.rs
src/middleware/: auth.rs
src/models/: user.rs
src/repository/: mod.rs  user_repo.rs
src/routes/: auth_routes.rs  mod.rs  user.rs
src/services/: auth_service.rs  user_service.rs
src/utils/: jwt.rs
