[package]
name = "backend-ax"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
mongodb = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
